[gd_scene load_steps=8 format=2]

[ext_resource path="res://CommonScenes/DemoThankYou/DemoThankYou.gd" type="Script" id=1]
[ext_resource path="res://CommonScenes/MainMenu/pngs/MainMenu_SplashScreen.png" type="Texture" id=2]
[ext_resource path="res://CommonScenes/MainMenu/pngs/MainMenu_Logo.png" type="Texture" id=3]
[ext_resource path="res://CommonScenes/Buttons/PureText.tres" type="Theme" id=4]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=5]
[ext_resource path="res://Fonts/OrbitronBold40.font" type="BitmapFont" id=6]
[ext_resource path="res://CommonScenes/PromptLegends/PromptLegendConfirmCancel.tscn" type="PackedScene" id=10]

[node name="DemoThankYou" type="CanvasLayer"]
layer = 5
script = ExtResource( 1 )

[node name="Content" type="Node2D" parent="."]
pause_mode = 2

[node name="TextureFrame" type="TextureRect" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1856.0
margin_bottom = 1016.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="Content"]
margin_left = 1276.0
margin_top = 148.0
margin_right = 1886.0
margin_bottom = 927.0
rect_min_size = Vector2( 509, 356 )
mouse_filter = 0
custom_constants/separation = 15
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Content/MenuContainer"]
margin_right = 610.0
margin_bottom = 287.0
texture = ExtResource( 3 )

[node name="ThanksMargins" type="MarginContainer" parent="Content/MenuContainer"]
margin_top = 302.0
margin_right = 610.0
margin_bottom = 448.0
custom_constants/margin_top = 15
custom_constants/margin_bottom = 30

[node name="Thanks" type="Label" parent="Content/MenuContainer/ThanksMargins"]
margin_top = 15.0
margin_right = 610.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0901961, 0.894118, 0.796078, 1 )
text = "Thank you for 
playing our Demo!"
align = 1

[node name="Steam" type="Button" parent="Content/MenuContainer"]
margin_top = 463.0
margin_right = 610.0
margin_bottom = 519.0
theme = ExtResource( 4 )
text = "Buy on Steam"
script = ExtResource( 5 )
pressed_sfx = "Confirm"

[node name="Itch" type="Button" parent="Content/MenuContainer"]
margin_top = 534.0
margin_right = 610.0
margin_bottom = 590.0
theme = ExtResource( 4 )
text = "Buy on itch.io"
script = ExtResource( 5 )
pressed_sfx = "Confirm"

[node name="Back" type="Button" parent="Content/MenuContainer"]
margin_top = 605.0
margin_right = 610.0
margin_bottom = 661.0
theme = ExtResource( 4 )
text = "Back"
script = ExtResource( 5 )
pressed_sfx = "Confirm"

[node name="PromptLegendConfirmCancel" parent="." instance=ExtResource( 10 )]
[connection signal="pressed" from="Content/MenuContainer/Steam" to="." method="_on_Steam_pressed"]
[connection signal="pressed" from="Content/MenuContainer/Itch" to="." method="_on_Itch_pressed"]
[connection signal="pressed" from="Content/MenuContainer/Back" to="." method="_on_Back_pressed"]
